turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:22: error: expected class or object definition
def makePattern() {
^Kerr36:29: error: Unmatched closing brace '}' ignored here
}
^